src/ActionSheet/index.css
.ActionSheet {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.ActionSheet--title {
  padding: 5px 10px;
  font-size: 12px;
  text-align: center;
  line-height: 1.5;
  color: #999;
  background-color: #fff;
} 

.ActionSheet--option {
  width: 100%;
  height: 46px;
  position: relative;
  text-align: center;
  font-size: 16px;
  text-decoration: none;
  line-height: 46px;
  background-color: #fff;
  position: relative;
}

.ActionSheet--cancel {
  margin-top: 5px;
}

